// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/panel/Settings/Notifications.jsx Snapshot tests with react-test-renderer Notifications is rendered correctly with falsy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_notifications
      </h3>
      <h5>
        settings_notify_me
      </h5>
      <div
        className="s-tooltip-down"
        data-g-tooltip="settings_notify_me_tooltip"
      >
        <img
          className="s-question"
          src="../../app/images/panel/icon-information-tooltip.svg"
        />
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-announcements"
            name="show_cmp"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-announcements"
            id="settings-announcements-label"
          >
            settings_announcements
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-new-features"
            name="notify_upgrade_updates"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-features"
            id="settings-new-features-label"
          >
            settings_new_features
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-new-promotions"
            name="notify_promotions"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-promotions"
            id="settings-new-promotions-label"
          >
            settings_new_promotions
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-new-trackers"
            name="notify_library_updates"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-trackers"
            id="settings-new-trackers-label"
          >
            settings_new_trackers
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-show-reload-banner"
            name="reload_banner_status"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-reload-banner"
            id="settings-show-reload-banner-label"
          >
            settings_show_reload_banner
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-show-trackers-banner"
            name="trackers_banner_status"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-trackers-banner"
            id="settings-show-trackers-banner-label"
          >
            settings_show_trackers_banner
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={false}
            id="settings-show-count-badge"
            name="show_badge"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-count-badge"
            id="settings-show-count-badge-label"
          >
            settings_show_tracker_count_badge
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/panel/Settings/Notifications.jsx Snapshot tests with react-test-renderer Notifications is rendered correctly with truthy props 1`] = `
<div
  className="s-tabs-panel"
>
  <div
    className="row"
  >
    <div
      className="columns"
    >
      <h3>
        settings_notifications
      </h3>
      <h5>
        settings_notify_me
      </h5>
      <div
        className="s-tooltip-down"
        data-g-tooltip="settings_notify_me_tooltip"
      >
        <img
          className="s-question"
          src="../../app/images/panel/icon-information-tooltip.svg"
        />
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-announcements"
            name="show_cmp"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-announcements"
            id="settings-announcements-label"
          >
            settings_announcements
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-new-features"
            name="notify_upgrade_updates"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-features"
            id="settings-new-features-label"
          >
            settings_new_features
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-new-promotions"
            name="notify_promotions"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-promotions"
            id="settings-new-promotions-label"
          >
            settings_new_promotions
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-new-trackers"
            name="notify_library_updates"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-new-trackers"
            id="settings-new-trackers-label"
          >
            settings_new_trackers
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-show-reload-banner"
            name="reload_banner_status"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-reload-banner"
            id="settings-show-reload-banner-label"
          >
            settings_show_reload_banner
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-show-trackers-banner"
            name="trackers_banner_status"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-trackers-banner"
            id="settings-show-trackers-banner-label"
          >
            settings_show_trackers_banner
          </label>
        </div>
      </div>
      <div
        className="s-option-group"
      >
        <div
          className="s-square-checkbox"
        >
          <input
            defaultChecked={true}
            id="settings-show-count-badge"
            name="show_badge"
            onClick={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="settings-show-count-badge"
            id="settings-show-count-badge-label"
          >
            settings_show_tracker_count_badge
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
